--- a/membership.tex
+++ b/membership.tex
@@ -2,7 +2,7 @@
 
 \subsection{Requirements for Admission}
 
-The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis students, undergraduate students, and others who contribute significantly to the CMB-S4 program. A rough guideline is that all collaborators should devote a substantial fraction of their research time to the CMB-S4 program over a period of several years.
+The CMB-S4 collaboration consists of Ph.D.\ scientists, engineers, Ph.D. thesis students, undergraduate students, and others who contribute significantly to the CMB-S4 program. A rough guideline is that all collaborators should devote a substantial fraction of their research time to the CMB-S4 program over a period of several years.
 Visiting scientists and engineers (henceforth visitors), such as faculty members on sabbatical at a CMB- S4-affiliated institution, may also be admitted to the collaboration as short-term members, provided they devote a substantial portion of their research time to the collaboration.
 
 The process of admission to the collaboration shall accord with the membership rules applicable to their degree of seniority. A senior member of the collaboration is a member from a collaborating institution who has a permanent appointment or an appointment that under normal circumstances can be expected to be renewed indefinitely. All other members of the collaboration are regular members. Senior members are admitted to the collaboration individually. Regular members are selected by their institutions. The only distinction between senior and regular members is the method by which they are admitted to the collaboration.
