Starting to clean up after merge to latex

--- a/publications.tex
+++ b/publications.tex
@@ -10,7 +10,7 @@ The policy below is a draft formal bylaws.  It is not a consensus document of th
 %CMB-S4 publication and talks bylaws Established March 2018
 
 \subsection{Principles}
-This policy seeks to ensure an equitable distribution of credit for work in the CMB-S4 Collaboration, to encourage and incentivize active work by collaboration members, and to ensure the resulting publications are of high quality. The authorship policy of the American Physical Society (2002) states: ?Authorship should be limited to those who have made a significant contribution to the concept, design, execution or interpretation of the research study. All those who have made significant contributions should be offered the opportunity to be listed as authors.  {\it https\://www.aps.org/policy/statements/02\_2\.cfm}
+This policy seeks to ensure an equitable distribution of credit for work in the CMB-S4 Collaboration, to encourage and incentivize active work by collaboration members, and to ensure the resulting publications are of high quality. The authorship policy of the American Physical Society (2002) states: \textit{``Authorship should be limited to those who have made a significant contribution to the concept, design, execution or interpretation of the research study. All those who have made significant contributions should be offered the opportunity to be listed as authors.''}\footnote{\url{https\://www.aps.org/policy/statements/02\_2\.cfm}}
 
 The Publication Policy will apply to all projects and publications that employ collaboration resources, including unreleased data, simulation codes and products, hardware and software
 engineering designs, and analysis pipelines. All CMB-S4 collaboration members agree to the publication policy upon joining, and if they leave the collaboration, they are bound by it for two years afterward.
