--- a/publications.tex
+++ b/publications.tex
@@ -3,9 +3,9 @@
 
 %\textcolor{red}{To be filled in by Publications WG}. 
 
-\Comment{Formal Publication and Speakers Bureau Policy - 2nd draft}
+\Comment{\textbf{Formal Publication and Speakers Bureau Policy - 2nd draft.}
+The policy below is a draft formal bylaws.  It is not a consensus document of the Interim Publications Working Group.  It is meant to be a complete, self-consistent policy to spur discussion and gather thoughts and suggestions about how the pieces need to work together. Points below that especially warrant further discussion or may be controversial are marked in red. The policy attempts to lay out the various responsibilities of publication board and speakers bureau members, working group coordinators, as well as relationships to other parts of the collaboration structure, like the governing board  and membership committee. These responsibilities could be redistributed in different ways. What projects/paper are ``Key," and get alphabetical author lists, if we adopt that model, is a point of contention, and we fill seek further input from the collaboration. We consider several possibilities for Key topics at the very end.}
 
-The policy below is a draft formal bylaws.  It is not a consensus document of the Interim Publications Working Group.  It is meant to be a complete, self-consistent policy to spur discussion and gather thoughts and suggestions about how the pieces need to work together. Points below that especially warrant further discussion or may be controversial are marked in red. The policy attempts to lay out the various responsibilities of publication board and speakers bureau members, working group coordinators, as well as relationships to other parts of the collaboration structure, like the governing board  and membership committee. These responsibilities could be redistributed in different ways. What projects/paper are ``Key," and get alphabetical author lists, if we adopt that model, is a point of contention, and we fill seek further input from the collaboration. We consider several possibilities for Key topics at the very end.
 
 %CMB-S4 publication and talks bylaws Established March 2018
 
@@ -20,13 +20,15 @@ The execution of the policy shall be overseen by a Publication and Speakers Boar
 
 \subsection{Project Proposal Process}
 
-\Comment{[Ed. note: The entire concept of ``Key Science" papers is up for discussion, but only bits are highlighted below to avoid making the whole paragraph red.  Such a concept (under various names) is employed is many collaborations.  At the very end, we place possible suggestions for ``Key" topics.]}
+\Comment{[Ed. note: The entire concept of ``Key Science'' papers is up for discussion, but only bits are highlighted below to avoid making the whole paragraph red.  Such a concept (under various names) is employed is many collaborations.  At the very end, we place possible suggestions for ``Key" topics.]}
 
 Any collaboration member may propose a collaboration research project to an appropriate Science or Technical Working Group.  Such a project is work that is intended to result in a journal publication after a fixed term, or a small set of related publications.  There are three categories for projects:
-Projects that are designated as ?Key Projects? represent the main science goals of the CMB-S4 collaboration (or forecasts for what we will achieve), where the collaboration must speak with a single voice.  
-?Standard? analysis projects represent other science goals and use collaboration science data.  
-Other forecasts and technical reports are collaboration-vetted projects that do not require collaboration science data and may lead to a publication or conference proceeding.  
-The Science Council will maintain the list of Key Science topics, established prior to any projects being initiated.  Topics can be added to the Key Science Paper list and reviewed in coordination with the Publication Board.
+\begin{enumerate}
+  \item Projects that are designated as ``Key Projects'' represent the main science goals of the CMB-S4 collaboration (or forecasts for what we will achieve), where the collaboration must speak with a single voice.  
+\item ``Standard'' analysis projects represent other science goals and use collaboration science data.  
+\item Other forecasts and technical reports are collaboration-vetted projects that do not require collaboration science data and may lead to a publication or conference proceeding.  
+\end{enumerate}
+  The Science Council will maintain the list of Key Science topics, established prior to any projects being initiated.  Topics can be added to the Key Science Paper list and reviewed in coordination with the Publication Board.
 
 The Publication Board will establish the template for project submission.  The project proposal document will designate a project leader and team, and describe the project, its estimated completion date, and final products.  Work on collaboration data should apply toward a collaboration project: failure to submit a project at its initiation, or writing a paper on internal collaboration data for submission when the data become public, will be considered a violation of the policy.  The same general type of analysis on subsequent observing seasons or data releases will be considered separate projects.  After discussion, resolution of conflicts, and consensus within the Working Group, the Working Group Coordinators will submit the project to the Science Council with a project category recommendation as a Key project, standard project, or theory forecast / technical report.  At this time the working group coordinators will announce the proposal to the Collaboration for a two-week consideration period, for discussion and further resolution of conflicts.  Addressing overlap between projects may require revision of the proposed project, and will be negotiated by the Working Group coordinators, Project Leaders, and Spokesperson(s).  Teams should welcome to join any colleagues that wish to make a defined and useful contribution to the project.
 
@@ -34,33 +36,46 @@ The Science Council may then approve the project or send it back to the Working 
 
 Projects led by thesis students will be given special consideration to protect them from competition within the collaboration.  Projects that require joint work with an external collaboration will require a memorandum of understanding set up by the Governance Board that specifies authorship and publication policies for that work.  These should be as compatible as possible with the respective collaboration policies.  Projects may add individual external collaborators to the team provided that no unreleased data is provided to them.
 
-Project teams have the responsibility to carry projects to completion and publication.  The Publication Board will query the working group coordinators twice yearly for progress reports on all projects, and forward the results to the Science Council.  Any projects without progress for one year will be noted as ?inactive? and will be dropped from the database if there is still no progress at the next review.
+Project teams have the responsibility to carry projects to completion and publication.  The Publication Board will query the working group coordinators twice yearly for progress reports on all projects, and forward the results to the Science Council.  Any projects without progress for one year will be noted as ``inactive'' and will be dropped from the database if there is still no progress at the next review.
 
 \subsection{Authorship}
-\Comment{[Ed. note: Aside from the concept of ``Key science" vs ``standard papers," the main dispute in this section relates to opt-in/opt-out as the default, or whether a weak opt-in is any better than an opt-out.]}
+\Comment{[Ed. note: Aside from the concept of ``Key science'' vs ``standard papers,'' the main dispute in this section relates to opt-in/opt-out as the default, or whether a weak opt-in is any better than an opt-out.]}
 
 The three types of projects differ in their authorship rules.
 
-For Key papers, all active members of the collaboration and all legacy members will automatically be placed on the author list.  The author list will start with ?The CMB-S4 Collaboration? and otherwise be alphabetical with the Project Leader designated as the corresponding author.  The Membership Board will provide the current list of eligible active and legacy members to the Publication Board, who will maintain an online process for members who choose to opt out of the paper.
-For standard papers, the author list will be two-tiered.  The first tier will typically consist of untenured (or equivalent) members of the project team, ordered according to their preference.  (The publication panel can allow exceptions for senior scientists in the first tier in rare cases when justified by their contribution.)  The project leader will typically be the first author.  The second tier will consist of all active members and legacy members that choose to opt in online after an email notification.  The final line of the author list will be ?The CMB-S4 Collaboration?
-For other forecasts and technical reports, the author list will consist of the project team only, plus any collaboration members that contributed to the study, as determined by the project team and appropriate working group coordinators, unless those author opt out.  The author list should be ordered according to the preference of the project team, followed by ?for the CMB-S4 Collaboration.?  For conference proceedings, the author list may be the single person who presented.
-
+\begin{enumerate}
+\item For Key papers, all active members of the collaboration and all legacy members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical with the Project Leader designated as the corresponding author.  The Membership Board will provide the current list of eligible active and legacy members to the Publication Board, who will maintain an online process for members who choose to opt out of the paper.
+\item For standard papers, the author list will be two-tiered.  The first tier will typically consist of untenured (or equivalent) members of the project team, ordered according to their preference.  (The publication panel can allow exceptions for senior scientists in the first tier in rare cases when justified by their contribution.)  The project leader will typically be the first author.  The second tier will consist of all active members and legacy members that choose to opt in online after an email notification.  The final line of the author list will be ``The CMB-S4 Collaboration''
+  \item For other forecasts and technical reports, the author list will consist of the project team only, plus any collaboration members that contributed to the study, as determined by the project team and appropriate working group coordinators, unless those author opt out.  The author list should be ordered according to the preference of the project team, followed by ``for the CMB-S4 Collaboration.''  For conference proceedings, the author list may be the single person who presented.
+\end{enumerate}
+    
 Any disputes regarding authorship will be resolved by the Publication Board with the Spokesperson providing a tie-breaking vote if necessary.  If an eligible member is unable to opt in, due to an unforeseen circumstance, the Publication Board may add them to the author list.
 
 \subsection{Collaboration Review and Paper Submission Process}
 \Comment{[Ed. note: the timing of the formation of the review team with respect to collaboration-wide review is a point of debate.  Some feel that the reviewers should be assigned early, so that they can iterate more with the authors on the paper.  Others feel the assignment of the editors should only happen at the beginning of the collaboration-wide formal review, otherwise the review process is too closed and not democratic.  The scheme below has a mix of these features.]}
  
-The project leader and the project team have the responsibility to draft the publication based on their research.  All collaboration papers will have a title following the template, ?CMB-S4: <results of amazing research>.?  These papers will be developed in coordination with the relevant working groups, and kept in a repository that is visible to the whole collaboration.  Any collaboration member may comment on the project at any time.  When the paper matures to an advanced draft, the working group coordinators will request that the Publication Board form an internal review committee.  
+The project leader and the project team have the responsibility to draft the publication based on their research.  All collaboration papers will have a title following the template, ``CMB-S4: \textit{results of amazing research}.''  These papers will be developed in coordination with the relevant working groups, and kept in a repository that is visible to the whole collaboration.  Any collaboration member may comment on the project at any time.  When the paper matures to an advanced draft, the working group coordinators will request that the Publication Board form an internal review committee.  
 
-This internal review committee consists of a primary and a secondary reviewer who have the responsibility that the collaboration?s publications are of uniform and high quality.  The reviewers are not current members of the Publication Board, but the Publication Board assigns one of its members to oversee the review of the paper as a rapporteur.  At least one of the reviewers or rapporteur should be a senior scientist who can insulate junior participants (whether authors, reviewers, or rapporteurs) from unfair criticism, if it occurs.
+This internal review committee consists of a primary and a secondary reviewer who have the responsibility that the collaboration's publications are of uniform and high quality.  The reviewers are not current members of the Publication Board, but the Publication Board assigns one of its members to oversee the review of the paper as a rapporteur.  At least one of the reviewers or rapporteur should be a senior scientist who can insulate junior participants (whether authors, reviewers, or rapporteurs) from unfair criticism, if it occurs.
 
 The Publication Board will notify the full collaboration that the internal review committee has formed.  Collaboration members may comment on the draft at any time, but when the authors are ready, the Publication board will sent announcement of a formal three-week comment period.  After the this comment period, the reviewers will provide a written report on the paper to the authors and Publication Board.
 
-All public comments, from collaboration members and from reviewers, are to be posted to a centralized location maintained by the Publication Board, along with the authors? responses.  All collaboration members have access to these previously asked questions and responses.
+All public comments, from collaboration members and from reviewers, are to be posted to a centralized location maintained by the Publication Board, along with the authors' responses.  All collaboration members have access to these previously asked questions and responses.
 
 The working group coordinators and rapporteur oversee iterations on the draft.  When the reviewers, working group coordinators, and rapporteur are satisfied that comments have been appropriately addressed, they present the paper to the Publication Board, who gives final permission and sets the date for paper submission.  The submission date is announced to the collaboration with a notice for final reading.  
 
-In total, all projects/papers will have four formal public announcements to the collaboration: (1) when proposed, (2) when the review committee forms, (3) when the formal comment period begins, and (4) when the call goes out for final reading before submission.  Projects will also naturally be discussed in plenary teleconference calls, progress reviews, and working group reports.
+In total, all projects/papers will have four formal public announcements to the collaboration:
+%\begin{enumerate}
+%\item when proposed,
+%\item when the review committee forms,
+%\item when the formal comment period begins, and
+%\item when the call goes out for final reading before submission.
+%\end{enumerate}
+(1) when proposed,
+(2) when the review committee forms,
+(3) when the formal comment period begins, and
+(4) when the call goes out for final reading before submission.
+  Projects will also naturally be discussed in plenary teleconference calls, progress reviews, and working group reports.
 
 All CMB-S4 publications, including proceedings and theses, must include a standard acknowledgment, agreed to and updated by the Governing Board, and made available by the Publication Board.  The CMB-S4 Collaboration will pay the page charges for Key papers. For all other papers, the page charges are the responsibility of the authors.
 
@@ -72,14 +87,16 @@ Graduate Thesis and dissertation documents are exempted from collaboration revie
 \Comment{[Ed. note: This is based on the non-controversial interim policy.]}
 
 The role of the Speakers Bureau is to help collaboration members give more and better talks in support of the CMB-S4 collaboration. The duties of the Speakers Bureau are to:
-Solicit invitations to conferences and identify good venues for contributed talks.
-Actively solicit speakers for invitations or notable conferences with no volunteer speakers. Priority and consideration should be given to the teams from projects where alphabetical author lists may obscure their role. 
-Promptly respond to requests for speakers from conference organizers and act a point-of-contact for people who want some CMB-S4 speaker but do not have specific ideas.
-Curate a library of standard plots and slides for speakers to use in talks.
-Maintain a library of past CMB-S4 talks.
-Address overlap from multiple requests to give talks on the same subject at the same conference, ideally by suggesting focus changes to make them on different topics. Talk prioritization will be at the committee's best judgment, but should reflect contributions to the topic in question, career status, whether the speaker was invited, and other similar factors.
+\begin{itemize}
+\item Solicit invitations to conferences and identify good venues for contributed talks.
+\item Actively solicit speakers for invitations or notable conferences with no volunteer speakers. Priority and consideration should be given to the teams from projects where alphabetical author lists may obscure their role. 
+\item Promptly respond to requests for speakers from conference organizers and act a point-of-contact for people who want some CMB-S4 speaker but do not have specific ideas.
+\item Curate a library of standard plots and slides for speakers to use in talks.
+\item Maintain a library of past CMB-S4 talks.
+\item Address overlap from multiple requests to give talks on the same subject at the same conference, ideally by suggesting focus changes to make them on different topics. Talk prioritization will be at the committee's best judgment, but should reflect contributions to the topic in question, career status, whether the speaker was invited, and other similar factors.
+\end{itemize}
 
-To give a talk, whether contributed to a conference/workshop or invited,  a collaboration member must notify the speakers bureau. This ensures that the speakers bureau has a chance to address overlapping talk request or, in the case of declined invitations, can locate another appropriate speaker.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The policy does not apply to talks on other subjects that contain brief advertisements for CMB-S4 (this is highly encouraged), to invited presentations that must remain confidential for programmatic reasons (e.g. certain agency reviews or presentations to private foundations or donors), or to informal presentation at collaboration members home institutions.  
+To give a talk, whether contributed to a conference/workshop or invited,  a collaboration member must notify the speakers bureau. This ensures that the speakers bureau has a chance to address overlapping talk request or, in the case of declined invitations, can locate another appropriate speaker.  The talks policy applies to all workshops, meetings, colloquia, public lectures, and seminars.  The policy does not apply to talks on other subjects that contain brief advertisements for CMB-S4 (this is highly encouraged), to invited presentations that must remain confidential for programmatic reasons (e.g. certain agency reviews or presentations to private foundations or donors), or to informal presentation at collaboration members' home institutions.  
 
 All talks must maintain confidentiality for the project. For all talks except those exempted in above, collaboration members must send abstracts and titles to the collaboration at least three days prior to submission, or as soon as possible in the event of last-minute invitations. Slides must be sent to the collaboration at least one week before being presented and should include ``for the CMB-S4 collaboration" on the title slide.
 
@@ -102,7 +119,7 @@ Any collaboration member can propose an amendment to the Publication/Speakers Po
 
 
 \subsection{Key Science Topics}
-\Comment{[Ed. note: below are various suggestions for topics that could be considered ?Key? papers and given alphabetical author lists.  They are organized from narrow to broad scope, where the broadest scope includes all science with CMB-S4.]}
+\Comment{[Ed. note: below are various suggestions for topics that could be considered ``Key'' papers and given alphabetical author lists.  They are organized from narrow to broad scope, where the broadest scope includes all science with CMB-S4.  \textbf{These should be a separate document maintained by the Science Council and not in the bylaws.}]}
 
 \subsubsection{Proposed list of Key Science topics (Super narrow scope)}
 
@@ -160,9 +177,10 @@ Galaxy Cluster Catalog
 
 Point Source Catalog
 
-Alternatively, Key Science topics could include almost everything (Broadest scope)
+\subsubsection{Proposed list of Key Science topics (Broadest scope)}
 (Idea is ``all data products and all science from the sky")
-Still excluded could be technical papers and lab-characterizations of equipment
+
+Key Science topics could include almost everything except technical papers and lab-characterizations of equipment
 
 
 
