--- a/membership.tex
+++ b/membership.tex
@@ -3,7 +3,7 @@
 \textcolor{red}{To be determined by Membership working group}
 
 
-Updated:  2/13/2018
+Updated:  2/15/2018
 
 \section{CMB-S4 Collaboration Membership Policy}
 
@@ -11,13 +11,12 @@ The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis s
 
 \vspace{0.2in}
 \noindent
-\textcolor{blue}{Note: comments given in blue text are not part of the official draft, and will be removed for the next iteration. }
+
 
 \subsection{Membership Council}
 \begin{itemize}
 
 \item 
-\textcolor{blue}{Composition and selection:  The composition of and method of selecting members of the Membership Council should be given in the Governance Policy section.  We recommend about 6 to 8 people on this committee, sized to be large enough to get the work done but small enough that everyone feels essential.  We note that this committee will be a lot of work and should count as significant service to CMB-S4.  This body should probably be elected, at least in part, in a fashion similar to the Governing Board.  We should ensure to have representatives from instrumentation and analysis working groups.  This committee should probably consist of Senior Members only, but care should be taken to ensure its decisions are transparent.}
 
 \item The duties of the Membership Council are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
 \end{itemize}
@@ -45,7 +44,7 @@ The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis s
 \begin{itemize}
 \item Herein, ``members'' refers to Senior, Postdoctoral, Student and Provisional members (but not Legacy Members) unless otherwise qualified.
 
-\item Senior and Postdoctoral Members vote for representation on the Governing Board.  \textcolor{blue}{(Details left to Governance Policy document.)}
+\item Senior and Postdoctoral Members vote for representation on the Governing Board.  
 
 \item Members have full data access, including during the proprietary period for data that are eventually released.
 
@@ -59,7 +58,7 @@ The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis s
 \begin{itemize}
 
 \item Members must commit effort to approved infrastructure tasks, which can include, for example, designing, building, and testing software, hardware, or simulations, as well as management. 
-\textcolor{blue}{(We are leaving this vague on purpose, anticipating that this will only get serious - in terms of approving tasks and quantifying required effort - when a project actually exists.)}  
+
 
 \end{itemize}
 
@@ -70,7 +69,7 @@ After the CMB-S4 collaboration is formed with a first set of initial members (se
 
 \item Potential Senior Members will apply for Provisonal Membership via a written application where they specify their proposed work on CMB-S4. 
 
-\item Independent postdocs not co-located with a Senior Member can apply for Postdoctoral Membership and have their application reviewed on a case-by-case basis. \textcolor{blue}{We believe that such independent postdocs should in practice be assigned a contact/mentor, but have not stipulated such in this policy document.}  
+\item Independent postdocs not co-located with a Senior Member can apply for Postdoctoral Membership and have their application reviewed on a case-by-case basis. 
 
 \item Postdoctoral members can apply for ``Intended Senior Membership Status", which would convey that the postdoc will have Senior Membership status when moving to a permanent appointment or an appointment that, under normal circumstances, can be expected to be renewed indefinitely.  The Membership Council will decide the requirements for achieving this status, the achievement of which grants Senior Membership at the new institution.
 
@@ -82,7 +81,7 @@ After the CMB-S4 collaboration is formed with a first set of initial members (se
 The CMB-S4 collaboration will initially consist of members who have satisfied the following criteria:
 
 \begin{itemize}
-\item Attended two CMB-S4 collaboration meetings, and 
+\item Attended at least two CMB-S4 collaboration meetings, and 
 
 \item Voted on the governance bylaws.
 \end{itemize}
@@ -109,7 +108,5 @@ Within the first year of the Collaboration's establishment, prospective members 
 
 \subsection{Procedure to Change Membership Policies}
 
-The Governing Board may change Membership policies by a 2/3 majority vote of voting members. \textcolor{blue}{Or whatever voting fraction the Membership Council decides.}  
-
-
+The Governing Board may change Membership policies by a 2/3 majority vote of voting members.
 
