Small formatting changes in Membership policy section

--- a/membership.tex
+++ b/membership.tex
@@ -3,8 +3,6 @@
 \textcolor{red}{To be determined by Membership working group}
 
 
-Updated:  2/15/2018
-
 \section{CMB-S4 Collaboration Membership Policy}
 
 The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis students, undergraduate students, and others who contribute significantly to the CMB-S4 program. Membership conveys certain rights as described below, but comes with the obligation of an ongoing commitment of a substantial fraction of members' research time to the CMB-S4 program.
@@ -14,10 +12,8 @@ The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis s
 
 
 \subsection{Membership Council}
-\begin{itemize}
 
-\item The duties of the Membership Council are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
-\end{itemize}
+The duties of the Membership Council are to review and evaluate membership applications, review annual activity reports, and recommend changes in membership status. 
 
 \subsection{Membership Types}
 
@@ -39,8 +35,9 @@ The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis s
 
 \subsection{Membership Rights}
 
+Herein, ``members'' refers to Senior, Postdoctoral, Student and Provisional members (but not Legacy Members) unless otherwise qualified.  
+
 \begin{itemize}
-\item Herein, ``members'' refers to Senior, Postdoctoral, Student and Provisional members (but not Legacy Members) unless otherwise qualified.
 
 \item Senior and Postdoctoral Members vote for representation on the Governing Board.  
 
@@ -57,11 +54,10 @@ The CMB-S4 collaboration consists of Ph.D. scientists, engineers, Ph.D. thesis s
 
 \item Members must commit effort to approved infrastructure tasks, which can include, for example, designing, building, and testing software, hardware, or simulations, as well as management. 
 
-
 \end{itemize}
 
 \subsection{Membership Application and Approval Process}
-After the CMB-S4 collaboration is formed with a first set of initial members (see section 1.6), the process for membership to CMB-S4 will be as specified below.
+After the CMB-S4 collaboration is formed with a first set of initial members (see Section \ref{sec:initmembership}), the process for membership to CMB-S4 will be as specified below.
 
 \begin{itemize}
 
@@ -76,6 +72,7 @@ After the CMB-S4 collaboration is formed with a first set of initial members (se
 \end{itemize}
 
 \subsection{Initial Membership}
+\label{sec:initmembership}
 The CMB-S4 collaboration will initially consist of members who have satisfied the following criteria:
 
 \begin{itemize}
