Minor cleanup edit

--- a/publications.tex
+++ b/publications.tex
@@ -4,7 +4,9 @@
 %\textcolor{red}{To be filled in by Publications WG}. 
 
 \Comment{\textbf{Formal Publication and Speakers Bureau Policy - 2nd draft.}
-The policy below is a draft formal bylaws.  It is not a consensus document of the Interim Publications Working Group.  It is meant to be a complete, self-consistent policy to spur discussion and gather thoughts and suggestions about how the pieces need to work together. Points below that especially warrant further discussion or may be controversial are marked in red. The policy attempts to lay out the various responsibilities of publication board and speakers bureau members, working group coordinators, as well as relationships to other parts of the collaboration structure, like the governing board  and membership committee. These responsibilities could be redistributed in different ways. What projects/paper are ``Key," and get alphabetical author lists, if we adopt that model, is a point of contention, and we fill seek further input from the collaboration. We consider several possibilities for Key topics at the very end.}
+  The policy below is a draft formal bylaws.  It is not a consensus document of the Interim Publications Working Group.  It is meant to be a complete, self-consistent policy to spur discussion and gather thoughts and suggestions about how the pieces need to work together.
+  %Points below that especially warrant further discussion or may be controversial are marked in red.
+  The policy attempts to lay out the various responsibilities of publication board and speakers bureau members, working group coordinators, as well as relationships to other parts of the collaboration structure, like the governing board  and membership committee. These responsibilities could be redistributed in different ways. What projects/paper are ``Key," and get alphabetical author lists, if we adopt that model, is a point of contention, and we fill seek further input from the collaboration. We consider several possibilities for Key topics at the very end.}
 
 
 %CMB-S4 publication and talks bylaws Established March 2018
