Updates to publications from 2/21 meeting

--- a/publications.tex
+++ b/publications.tex
@@ -3,10 +3,7 @@
 
 %\textcolor{red}{To be filled in by Publications WG}. 
 
-\Comment{\textbf{Formal Publication and Speakers Bureau Policy - 2nd draft.}
-  The policy below is a draft formal bylaws.  It is not a consensus document of the Interim Publications Working Group.  It is meant to be a complete, self-consistent policy to spur discussion and gather thoughts and suggestions about how the pieces need to work together.
-  %Points below that especially warrant further discussion or may be controversial are marked in red.
-  The policy attempts to lay out the various responsibilities of publication board and speakers bureau members, working group coordinators, as well as relationships to other parts of the collaboration structure, like the governing board  and membership committee. These responsibilities could be redistributed in different ways. What projects/paper are ``Key," and get alphabetical author lists, if we adopt that model, is a point of contention, and we fill seek further input from the collaboration. We consider several possibilities for Key topics at the very end.}
+%\Comment{\textbf{Formal Publication and Speakers Bureau Policy - 2nd draft.}  The policy below is a draft formal bylaws.  It is not a consensus document of the Interim Publications Working Group.  It is meant to be a complete, self-consistent policy to spur discussion and gather thoughts and suggestions about how the pieces need to work together.  The policy attempts to lay out the various responsibilities of publication board and speakers bureau members, working group coordinators, as well as relationships to other parts of the collaboration structure, like the governing board  and membership committee. These responsibilities could be redistributed in different ways. What projects/paper are ``Key," and get alphabetical author lists, if we adopt that model, is a point of contention, and we fill seek further input from the collaboration. We consider several possibilities for Key topics at the very end.}
 
 
 %CMB-S4 publication and talks bylaws Established March 2018
@@ -18,11 +15,11 @@ The Publication Policy will apply to all projects and publications that employ c
 engineering designs, and analysis pipelines. All CMB-S4 collaboration members agree to the publication policy upon joining, and if they leave the collaboration, they are bound by it for two years afterward.
 
 \subsection{Organization}
-The execution of the policy shall be overseen by a Publication and Speakers Board chaired by an elected representative from the Executive Board.  There are two sub-committees: the Publications Board with eight collaboration members and the Speakers Bureau with four collaboration members. Roughly half of each group should be pre-tenure. The Governing board shall appoint members to these positions for staggered two-year, non-consecutive terms. The collaboration Spokesperson(s) will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Board will keep track of active collaboration members and legacy member for the purposes of establishing author lists for papers.
+The execution of the policy shall be overseen by a Publication and Speakers Council chaired by an elected representative from the Executive Team.  There are two sub-committees: the Publications Board with eight collaboration members and the Speakers Bureau with four collaboration members. Roughly half of each group should be pre-tenure. The Spokespersons and Executive Team shall appoint members to these positions for staggered two-year, non-consecutive terms. The collaboration Spokespersons will also help to navigate and resolve potential conflicts. The Science Council approves the projects that lead to publications. The Membership Board will keep track of active collaboration members and legacy member for the purposes of establishing author lists for papers.
 
 \subsection{Project Proposal Process}
 
-\Comment{[Ed. note: The entire concept of ``Key Science'' papers is up for discussion, but only bits are highlighted below to avoid making the whole paragraph red.  Such a concept (under various names) is employed is many collaborations.  At the very end, we place possible suggestions for ``Key" topics.]}
+%\Comment{[Ed. note: The entire concept of ``Key Science'' papers is up for discussion, but only bits are highlighted below to avoid making the whole paragraph red.  Such a concept (under various names) is employed is many collaborations.  At the very end, we place possible suggestions for ``Key" topics.]}
 
 Any collaboration member may propose a collaboration research project to an appropriate Science or Technical Working Group.  Such a project is work that is intended to result in a journal publication after a fixed term, or a small set of related publications.  There are three categories for projects:
 \begin{enumerate}
@@ -30,9 +27,11 @@ Any collaboration member may propose a collaboration research project to an appr
 \item ``Standard'' analysis projects represent other science goals and use collaboration science data.  
 \item Other forecasts and technical reports are collaboration-vetted projects that do not require collaboration science data and may lead to a publication or conference proceeding.  
 \end{enumerate}
-  The Science Council will maintain the list of Key Science topics, established prior to any projects being initiated.  Topics can be added to the Key Science Paper list and reviewed in coordination with the Publication Board.
+The Science Council will maintain the list of Key Science topics, to be established prior to any projects being initiated.  Topics can be added to the Key Science paper list and reviewed in coordination with the Publication Board.
 
-The Publication Board will establish the template for project submission.  The project proposal document will designate a project leader and team, and describe the project, its estimated completion date, and final products.  Work on collaboration data should apply toward a collaboration project: failure to submit a project at its initiation, or writing a paper on internal collaboration data for submission when the data become public, will be considered a violation of the policy.  The same general type of analysis on subsequent observing seasons or data releases will be considered separate projects.  After discussion, resolution of conflicts, and consensus within the Working Group, the Working Group Coordinators will submit the project to the Science Council with a project category recommendation as a Key project, standard project, or theory forecast / technical report.  At this time the working group coordinators will announce the proposal to the Collaboration for a two-week consideration period, for discussion and further resolution of conflicts.  Addressing overlap between projects may require revision of the proposed project, and will be negotiated by the Working Group coordinators, Project Leaders, and Spokesperson(s).  Teams should welcome to join any colleagues that wish to make a defined and useful contribution to the project.
+The Publication Board will establish the template for project submission.  The project proposal document will designate a project leader and team, and describe the project, its estimated completion date, and final products.  Work on collaboration data should apply toward a collaboration project: failure to submit a project at its initiation, or writing a paper on internal collaboration data for submission when the data become public, will be considered a violation of the policy.  The same general type of analysis on subsequent observing seasons or data releases will be considered separate projects.
+
+After discussion, resolution of conflicts, and consensus within the Working Group, the Working Group Coordinators will submit the project to the Science Council with a project category recommendation as a Key project, standard project, or theory forecast / technical report.  At this time the working group coordinators will announce the proposal to the Collaboration for a two-week consideration period, for discussion and further resolution of conflicts.  Addressing overlap between projects may require revision of the proposed project, and will be negotiated by the Working Group coordinators, Project Leaders, and Spokesperson(s).  Teams should welcome to join any colleagues that wish to make a defined and useful contribution to the project.
 
 The Science Council may then approve the project or send it back to the Working Group for further revision.  In the event of a tie vote in the Science Council, the collaboration spokesperson  will cast the deciding vote.  When approved, the Publication Board will record the proposal in its project database.  Once recorded, the collaboration may not re-classify a standard project as key without the written agreement of all named project team members.  If there is any substantial change in the scope of a project as it matures, the Project Leader should adjust the project description accordingly, which will result in a new announcement and opportunity for collaboration review.
 
@@ -41,20 +40,25 @@ Projects led by thesis students will be given special consideration to protect t
 Project teams have the responsibility to carry projects to completion and publication.  The Publication Board will query the working group coordinators twice yearly for progress reports on all projects, and forward the results to the Science Council.  Any projects without progress for one year will be noted as ``inactive'' and will be dropped from the database if there is still no progress at the next review.
 
 \subsection{Authorship}
-\Comment{[Ed. note: Aside from the concept of ``Key science'' vs ``standard papers,'' the main dispute in this section relates to opt-in/opt-out as the default, or whether a weak opt-in is any better than an opt-out.]}
+%\Comment{[Ed. note: Aside from the concept of ``Key science'' vs ``standard papers,'' the main dispute in this section relates to opt-in/opt-out as the default, or whether a weak opt-in is any better than an opt-out.]}
 
-The three types of projects differ in their authorship rules.
+For the purposes of authorship, ``active collaboration members'' consist of Senior, Postdoctoral, and Graduate members of the collaboration as defined in the membership council bylaws.  Provisional member may appear on papers to which they actively contribute.  The three types of projects differ in their authorship rules.
 
 \begin{enumerate}
-\item For Key papers, all active members of the collaboration and all legacy members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical with the Project Leader designated as the corresponding author.  The Membership Board will provide the current list of eligible active and legacy members to the Publication Board, who will maintain an online process for members who choose to opt out of the paper.
-\item For standard papers, the author list will be two-tiered.  The first tier will typically consist of untenured (or equivalent) members of the project team, ordered according to their preference.  (The publication panel can allow exceptions for senior scientists in the first tier in rare cases when justified by their contribution.)  The project leader will typically be the first author.  The second tier will consist of all active members and legacy members that choose to opt in online after an email notification.  The final line of the author list will be ``The CMB-S4 Collaboration''
+\item For Key papers, all active members of the collaboration and all legacy members will automatically be placed on the author list.  The author list will start with ``The CMB-S4 Collaboration'' and otherwise be alphabetical.  The project team will designate a small number of corresponding authors.  The Membership Board will provide the current list of eligible active and legacy members to the Publication Board, who will maintain an online process for members who choose to opt out of the paper.
+\item For standard papers, the author list will be two-tiered.
+%  The first tier will typically consist of untenured (or equivalent) members of the project team, ordered according to their preference.  (The publication panel can allow exceptions for senior scientists in the first tier in rare cases when justified by their contribution.)
+  Project teams may organize the first author tier as appropriate for the paper, and although not required, conventionally the tenured members of the project team will appear in the second, alphabetical tier of authors.
+  %The project leader will typically be the first author.
+  The second tier will consist of all active members and legacy members that choose to opt in online after an email notification.  The final line of the author list will be ``The CMB-S4 Collaboration.''
   \item For other forecasts and technical reports, the author list will consist of the project team only, plus any collaboration members that contributed to the study, as determined by the project team and appropriate working group coordinators, unless those author opt out.  The author list should be ordered according to the preference of the project team, followed by ``for the CMB-S4 Collaboration.''  For conference proceedings, the author list may be the single person who presented.
 \end{enumerate}
-    
+
+
 Any disputes regarding authorship will be resolved by the Publication Board with the Spokesperson providing a tie-breaking vote if necessary.  If an eligible member is unable to opt in, due to an unforeseen circumstance, the Publication Board may add them to the author list.
 
 \subsection{Collaboration Review and Paper Submission Process}
-\Comment{[Ed. note: the timing of the formation of the review team with respect to collaboration-wide review is a point of debate.  Some feel that the reviewers should be assigned early, so that they can iterate more with the authors on the paper.  Others feel the assignment of the editors should only happen at the beginning of the collaboration-wide formal review, otherwise the review process is too closed and not democratic.  The scheme below has a mix of these features.]}
+%\Comment{[Ed. note: the timing of the formation of the review team with respect to collaboration-wide review is a point of debate.  Some feel that the reviewers should be assigned early, so that they can iterate more with the authors on the paper.  Others feel the assignment of the editors should only happen at the beginning of the collaboration-wide formal review, otherwise the review process is too closed and not democratic.  The scheme below has a mix of these features.]}
  
 The project leader and the project team have the responsibility to draft the publication based on their research.  All collaboration papers will have a title following the template, ``CMB-S4: \textit{results of amazing research}.''  These papers will be developed in coordination with the relevant working groups, and kept in a repository that is visible to the whole collaboration.  Any collaboration member may comment on the project at any time.  When the paper matures to an advanced draft, the working group coordinators will request that the Publication Board form an internal review committee.  
 
@@ -86,7 +90,7 @@ Any disputes regarding the review process will be resolved by the Publication Bo
 Graduate Thesis and dissertation documents are exempted from collaboration review, but related publications (e.g. developed from an individual chapter) are subject to review.
 
 \subsection{Talks and Public communications}
-\Comment{[Ed. note: This is based on the non-controversial interim policy.]}
+%\Comment{[Ed. note: This is based on the non-controversial interim policy.]}
 
 The role of the Speakers Bureau is to help collaboration members give more and better talks in support of the CMB-S4 collaboration. The duties of the Speakers Bureau are to:
 \begin{itemize}
@@ -121,7 +125,7 @@ Any collaboration member can propose an amendment to the Publication/Speakers Po
 
 
 \subsection{Key Science Topics}
-\Comment{[Ed. note: below are various suggestions for topics that could be considered ``Key'' papers and given alphabetical author lists.  They are organized from narrow to broad scope, where the broadest scope includes all science with CMB-S4.  \textbf{These should be a separate document maintained by the Science Council and not in the bylaws.}]}
+%\Comment{[Ed. note: below are various suggestions for topics that could be considered ``Key'' papers and given alphabetical author lists.  They are organized from narrow to broad scope, where the broadest scope includes all science with CMB-S4.  \textbf{These should be a separate document maintained by the Science Council and not in the bylaws.}]}
 
 \subsubsection{Proposed list of Key Science topics (Super narrow scope)}
 
